create invoice works
